Added syncronization between threads and bux fixes